fix: GHAS auto-remediation via repo-task-orchestrator